Fixed layout issues with skill networks component. Almost complete with all media query layouts other than portrait on small phones. Will implement animated slider for this.

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -29,11 +29,8 @@
 .top-bar {
   display: flex;
   justify-content: center;
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 70px;
-  padding-top: 10px;
+  position: static;
+  height: auto;
   width: 100%;
 }
 
@@ -135,12 +132,8 @@
 
 @media only screen and (max-width: 700px) {
   .top-bar {
-    position: static;
     display: block;
     margin: 0 auto;
-    margin-top: 1em;
-    height: 70px;
-    padding-top: 10px;
     width: 100%;
     a {
       margin: 0 auto;
@@ -168,18 +161,15 @@
 // For phones in portrait.
 @media only screen and (max-width: 500px) {
   .top-bar {
-    position: static;
     display: block;
     margin: 0 auto;
-    margin-top: 1em;
     margin-bottom: 1em;
-    height: 70px;
     padding-top: 10px;
     width: 100%;
     a {
       margin: 0 auto;
+      padding-bottom: 8px;
       margin-bottom: 8px;
-      width: 50%;
     }
   }
   .content-wrap {
